--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="http://localhost:8080/static/img/qxlogo.ico" type="image/x-icon">
-    <title>iga</title>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="src/assets/css/reset.css">
   </head>
   <body>
